--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "lihe3 <lihe3@corp.beisencorp.com>",
   "license": "MIT",
   "dependencies": {
+    "css-loader": "^0.28.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "redux": "^3.6.0",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
   }
 }
