--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "author": "lihe3 <lihe3@corp.beisencorp.com>",
   "license": "MIT",
   "dependencies": {
+    "codecov": "^2.2.0",
     "css-loader": "^0.28.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "redux": "^3.6.0",
     "style-loader": "^0.18.2",
+    "travis": "^0.1.1",
     "webpack": "^2.6.1"
+  },
+  "scripts": {
+    "debug": "node --inspect --debug-brk node_modules/.bin/webpack --config webpack/webpack.config.js"
   }
 }
