--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "lihe3 <lihe3@corp.beisencorp.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "codecov": "^2.2.0",
     "css-loader": "^0.28.4",
     "react": "^15.6.1",
@@ -17,6 +21,6 @@
   },
   "scripts": {
     "debug": "node --inspect --debug-brk node_modules/.bin/webpack --config webpack/webpack.config.js",
-    "build":"webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js"
   }
 }
