--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "codecov": "^2.2.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
+    "immutable": "^3.8.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "redux": "^3.6.0",
